clearer update cycle declaration

--- a/source/content/update_cycle/3__0_3.md
+++ b/source/content/update_cycle/3__0_3.md
@@ -1,5 +1,5 @@
 {% if slide %}
-### step 3/0.3 - `merge`
+###  3{octicon}`sync;0.8em`/ 0.3{octicon}`sync;0.8em` - `merge`
 {% endif %}
 
 {% if slide %}
