--- a/source/content/update_cycle/3__1.md
+++ b/source/content/update_cycle/3__1.md
@@ -1,5 +1,5 @@
 {% if slide %}
-### step 3/1 - `merge`
+###  3{octicon}`sync;0.8em`/ 1{octicon}`sync;0.8em` - `merge`
 {% endif %}
 
 {% if slide %}
